<resources>
    <string name="app_name">FamilyMapServer</string>
    <string name="title_text">Family Map</string>

    <!--login screen strings-->
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="login_success_toast">Display first and last name</string>
    <string name="login_fail_toast">Display login error</string>
    <string name="register_success_toast">Display first and last name</string>
    <string name="register_fail_toast">Display register error</string>
    <string name="title_activity_login_fragment">LoginFragment</string>
    <string name="title_activity_main">Family Map</string>
    <string name="host_text">Server Host:</string>
    <string name="port_text">Server Port:</string>
    <string name="username_text">Username:</string>
    <string name="password_text">Password:</string>
    <string name="first_text">First Name:</string>
    <string name="last_text">Last Name:</string>
    <string name="email_text">Email:</string>
    <string name="gender_text">Gender:</string>
    <string name="male_text">Male</string>
    <string name="female_text">Female</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <!--map fragment strings-->
    <string name="map_instruction"><b>Select a marker</b></string>
    <string name="map_instruction2"><b>to see event details</b></string>
    <string name="bottom_section_description">Description of</string>
    <string name="bottom_section_description2">selected event</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="colorsG">
        <item>Green</item>
        <item>Blue</item>
        <item>Red</item>
    </string-array>

    <string-array name="colorsB">
        <item>Blue</item>
        <item>Red</item>
        <item>Green</item>
    </string-array>

    <string-array name="colorsR">
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>

    <string-array name="types">
        <item>Normal</item>
        <item>Hybrid</item>
        <item>Satellite</item>
        <item>Terrain</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


</resources>
